2006-05-29  Junichi Uekawa  <dancer@debian.org>

	* tests/014_ilistdump_test.sh: sort both

	* tests/900_test_pbuilder.sh: use cowbuilder to test instead of
	hand-assembled stuff.

	* cowbuilder.c (cpbuilder_login): handle error
	(cpbuilder_execute, cpbuilder_update): handle error
	(main): create /var/cache/pbuilder/build/ directory if it doesn't
	already exist.
	(main): support --distribution option.
	(main): support --buildplace option.

	* cowbuilder.8: --basepath, not --basetgz.

2006-05-27  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (main): help iplementation.
	(pbuilder_help): help message.
	(main): 

2006-05-26  Junichi Uekawa  <dancer@debian.org>

	* debian/control: update description.

2006-05-24  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update, note .ilist handling is a problem I have
	pondered and not reached any conclusions. I need to measure some
	timings and other stuff.

	* debian/changelog: fixed entry.

	* NEWS: added entry.

	* cowbuilder.c (main): implement save-after-login
	(cpbuilder_login, cpbuilder_execute)
	(cpbuilder_internal_saveupdate, cpbuilder_update): unify the
	replace-original routine.

	* debian/TODO: document more TODO items until cowbuilder becomes really usable.

	* cowbuilder.c: change default basepath and buildplace. basepath
	is in /var/cache/pbuilder/base.cow, and buildplace is in
	/var/cache/pbuilder/build.
	(cpbuilder_execute): effects of pbuilder --execute with -- seems sane.
	pbuilder documentation is updated with this insight.

	$ sudo pbuilder execute -- /bin/echo --world
	W: /home/dancer/.pbuilderrc does not exist
	Building the build Environment
	 -> extracting base tarball [/var/cache/pbuilder/base.tgz]

	$ sudo ./cowbuilder.c --execute hello --world
	./cowbuilder.c: unrecognized option `--world'
	Unhandled option

	[08:51:22]ibookg4:cowdancer> time sudo ./cowbuilder.c --execute -- /bin/echo hello --world
	 -> Copying COW directory
	 -> Invoking pbuilder
	DEBUG: 0: pbuilder
	DEBUG: 1: execute