@@ -1,8 +1,9 @@
 cowdancer (0.16) UNRELEASED; urgency=low
 
-  * 
+  * add test case for sid/etc debootstrap with cdebootstrap and
+    debootstrap.
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 29 May 2006 07:25:49 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Tue,  6 Jun 2006 20:02:46 +0900
 
 cowdancer (0.15) unstable; urgency=low
 
